# mathmaker

./: .dockerignore  .flake8  .gitignore  .pylintrc  .readthedocs.yml  .travis.yml  CHANGELOG.rst  CONTRIBUTORS.rst  Dockerfile  MANIFEST.in  README.md  README.rst  appveyor.yml  autotest-mathmaker  mathmaker  mathmaker.cfg  pyproject.toml  pytest.ini  requirements.txt  setup.py  tox.ini  travis.yml
.auxiliary_scripts/: import_msgstr  retrieve_entries  retrieve_po_entries
core/: __init__.py  base.py  base_calculus.py  base_geometry.py  calculus.py  geometry.py  root_calculus.py
data/: mathmaker.db-dist
docs/: Makefile  conf.py  dev_doc.rst  dev_index.rst  index.rst  make.bat  mathmaker.lib.common.rst  mathmaker.lib.constants.rst  mathmaker.lib.core.rst  mathmaker.lib.document.content.algebra.rst  mathmaker.lib.document.content.calculation.rst  mathmaker.lib.document.content.geometry.rst  mathmaker.lib.document.content.rst  mathmaker.lib.document.frames.rst  mathmaker.lib.document.rst  mathmaker.lib.machine.rst  mathmaker.lib.old_style_sheet.exercise.question.rst  mathmaker.lib.old_style_sheet.exercise.rst  mathmaker.lib.old_style_sheet.rst  mathmaker.lib.rst  mathmaker.lib.sheet.exercise.question.algebra_modules.rst  mathmaker.lib.sheet.exercise.question.calculation_modules.rst  mathmaker.lib.sheet.exercise.question.geometry_modules.rst  mathmaker.lib.sheet.exercise.question.mc_modules.rst  mathmaker.lib.sheet.exercise.question.rst  mathmaker.lib.sheet.exercise.rst  mathmaker.lib.sheet.rst  mathmaker.lib.tools.generators.rst  mathmaker.lib.tools.rst  mathmaker.rst  mathmaker.settings.rst  modules.rst  user_doc.rst  user_index.rst
lib/: __init__.py  error.py  is_.py  logging.yaml  logging.yml  maths_lib.py  po_file_tools.py  randomly.py  shared.py  sources.py  sources_tools.py  startup_actions.py  translator.py  utils.py  wordings_handling_tools.py
locale/: add_strings_from_xml_files  additional_translations.xml  build_db.py  check_py_updates  check_xml_files  i18n.txt  mathmaker.pot  merge_py_updates_to_main_pot_file  merge_xml_updates_to_pot_file  names_f.pot  names_m.pot  update_pot_file  update_pot_files
machine/: LaTeX.py  Structure.py  __init__.py
(+1475 files in other folders)
